--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx tailwindcss -i ./src/input.css -o ./src/output.css",
+    "build": "cross-env NODE_ENV=production npx tailwindcss -i ./src/input.css -o ./dist/output.css"
+  },
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.4.3",
+    "cross-env": "^7.0.3"
   }
 }
