--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx tailwindcss -i ./src/input.css -o ./src/output.css",
-    "build": "cross-env NODE_ENV=production npx tailwindcss -i ./src/input.css -o ./dist/output.css"
+    "build": "cross-env NODE_ENV=production npx tailwindcss -i ./src/input.css -o ./src/output.css"
   },
   "devDependencies": {
     "tailwindcss": "^3.4.3",
