--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
+  "name": "my-project",
+  "version": "1.0.0",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tailwindcss -i ./src/input.css -o ./src/output.css",
-    "build": "cross-env NODE_ENV=production npx tailwindcss -i /src/input.css -o /src/output.css"
+    "build:css": "tailwindcss build src/input.css -o src/output.css",
+    "build": "npm run build:css"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "postcss": "^8.0.0"
   },
   "dependencies": {
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "tailwindcss": "^3.4.3"
   }
 }
