--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "build-with-angga-tes-magang",
   "version": "1.0.0",
   "scripts": {
-    "build:css": "tailwindcss build src/input.css -o src/output.css",
+    "build:css": "tailwindcss build src/input.css -o dist/output.css",
     "build": "npm run build:css"
   },
   "devDependencies": {
