--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
   "name": "build-with-angga-tes-magang",
   "version": "1.0.0",
   "scripts": {
-    "build:css": "tailwindcss build src/input.css -o dist/output.css",
-    "build": "npm run build:css"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "npx tailwindcss -i ./src/input.css -o ./dist/output.css",
+    "build": "cross-env NODE_ENV=production npx tailwindcss -i ./src/input.css -o ./dist/output.css"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
-    "postcss": "^8.0.0"
+    "tailwindcss": "^3.3.3"
   },
   "dependencies": {
-    "tailwindcss": "^3.4.3"
+    "cross-env": "^7.0.3"
   }
 }
