--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "name": "build-with-angga-tes-magang",
   "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "npx tailwindcss -i ./src/input.css -o ./dist/output.css",
@@ -10,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "tailwindcss": "^3.4.3"
+    "cross-env": "^7.0.3",
+    "postcss": "^8.4.38"
   },
   "dependencies": {
-    "cross-env": "^7.0.3"
+    "autoprefixer": "^10.4.19",
+    "tailwindcss": "^3.4.3"
   }
 }
