--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
-  "name": "build-with-angga-tes-magang",
+  "name": "my-project",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tailwindcss -i ./src/input.css -o ./dist/output.css",
-    "build": "cross-env NODE_ENV=production npx tailwindcss -i ./src/input.css -o ./dist/output.css"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "cross-env": "^7.0.3",
-    "postcss": "^8.4.38"
+    "build:css": "tailwindcss build -i src/input.css -o src/output.css",
+    "build": "npm run build:css"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.19",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^3.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.0.0",
+    "postcss": "^8.0.0"
   }
 }
